<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drinks">
    <TextView
        android:id="@+id/drinkstitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/scndteal"
        android:text="  Drinks"
        android:textSize="50dp"
        />
    <Button
        android:id="@+id/myorder_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myorder"
        android:backgroundTint="@color/thrdteal"
        android:layout_margin="14dp"
        app:layout_constraintTop_toBottomOf="@id/drinkstitle"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/drinksmenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/myorder_but"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/water"
            />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waterPrice"
                />

        </LinearLayout>

        <Button
            android:id="@+id/order_water"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drinksmenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinksmenu1">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/orangejuice" />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orangejuice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orangePrice" />

        </LinearLayout>

        <Button
            android:id="@+id/order_orange"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drinksmenu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinksmenu2">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/tea" />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teaPrice" />

        </LinearLayout>



        <Button
            android:id="@+id/order_tea"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drinksmenu4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinksmenu3">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/coffee" />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffeePrice" />

        </LinearLayout>



        <Button
            android:id="@+id/order_coffee"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>

    <Button
        android:id="@+id/order_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/thrdteal"
        android:text="Order More"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drinksmenu4" />
</androidx.constraintlayout.widget.ConstraintLayout>