<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Food">
    <TextView
        android:id="@+id/foodtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/scndteal"
        android:text="  Foods"
        android:textSize="50dp"
        />
    <Button
        android:id="@+id/myorder_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myorder"
        android:backgroundTint="@color/thrdteal"
        android:layout_margin="14dp"
        app:layout_constraintTop_toBottomOf="@id/foodtitle"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/foodmenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/myorder_but"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/satepadang"
            />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satepadang"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satepadangprice"
                />

        </LinearLayout>

        <Button
            android:id="@+id/order_sate"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/foodmenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodmenu1">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/indomiegoreng" />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indomiegoreng" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indomiegorengprice" />

        </LinearLayout>


        <Button
            android:id="@+id/order_miegoreng"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/foodmenu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodmenu2">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/indomiekuah" />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indomiekuah" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indomiekuahprice" />

        </LinearLayout>

        <Button
            android:id="@+id/order_miekuah"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/foodmenu4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodmenu3">

        <ImageView
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/ayamgoreng" />


        <LinearLayout
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayamgoreng" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayamgorengprice" />

        </LinearLayout>

        <Button
            android:id="@+id/order_ayam"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/thrdteal"
            android:text="Order"
            android:textSize="18dp"

            />
    </LinearLayout>
    <Button
        android:id="@+id/order_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/thrdteal"
        android:text="Order More"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foodmenu4" />
</androidx.constraintlayout.widget.ConstraintLayout>